# DVD_Rental_SQL

./: .env.example  .gitignore  Makefile  SETUP.md  pyproject.toml  sql-learning.sql  sql.ipynb
postgres-setup/: dockerfile  import-data.sh
