[project]
name = "postgres-db-dvdrental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython-sql>=0.5.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
]
